src/test/ui/type-alias-enum-variants/no-type-application-on-aliased-enum-variant.stderr
error: type parameter on variant
  --> $DIR/no-type-application-on-aliased-enum-variant.rs:12:27
   |
LL |     let _ = Option::None::<u8>;
   |                           ^^^^
   |
note: the lint level is defined here
  --> $DIR/no-type-application-on-aliased-enum-variant.rs:1:9
   |
LL | #![deny(type_param_on_variant_ctor)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: set the type parameter on the enum
   |
LL |     let _ = Option::<u8>::None;
   |                   ^^^^^^     --

error[E0109]: type arguments are not allowed for this type
  --> $DIR/no-type-application-on-aliased-enum-variant.rs:14:27
   |
LL |     let _ = Alias::None::<u8>;
   |                           ^^ type argument not allowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0109`.
